service.yml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple-app
  ports:
    - port: 5678 # Default port for image	
      targetPort: 5678
